Completed Validator class, changed java version in pom.xml